Fix the alignment and the layout of last section

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header {
     place-self: center;
 }
 
-.user-svg {
+.user-account .user-svg {
     background-image: url('./avatars/avataaars.svg');
     background-size: contain;
     width: 60px;
@@ -255,12 +255,17 @@ main {
     background-color: var(--gray-color);
     padding-top: 1.5rem;
     padding-left: 1rem;
-    padding-right: 1rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
 
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr;
     gap: 1rem;
+}
+
+main > div{
+    gap: .5rem;
 }
 
 .user-projects {
@@ -268,6 +273,9 @@ main {
 
     grid-row: 1 / 3;
     grid-column: 1 / 2;
+
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .announcements {
@@ -278,6 +286,9 @@ main {
 .trending {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 main > div > p {
@@ -292,7 +303,6 @@ main > div > p {
 }
 
 .items {
-    height: 200px;
     padding: 20px 10px 10px 20px;
     background-color: var(--pure-white-color);
     border-left: .5rem solid var(--orange-color);
@@ -376,4 +386,60 @@ main > div > p {
 
 .announcements-container > div:last-of-type {
     border: none;
+}
+
+.trending-container {
+    background-color: var(--pure-white-color);
+    padding: 10px 25px;
+    border-radius: .6rem;
+    box-shadow: 3px 3px 4px 2px var(--gray-shadow);
+
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.tegan-svg,
+.kendall-svg,
+.alex-svg,
+.trending-container .user-svg {
+    background-size: contain;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+
+    align-self: center;
+}
+
+.tegan-svg {
+    background-image: url('./avatars/avataaars\ \(1\).svg');
+}
+
+.kendall-svg {
+    background-image: url('./avatars/avataaars\ \(2\).svg');
+}
+
+.alex-svg {
+    background-image: url('./avatars/avataaars\ \(3\).svg');
+}
+
+.trending-container .user-svg {
+    background-image: url('./avatars/avataaars.svg');
+}
+
+.trending-container > div {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 10px;
+}
+
+.user-info {
+    align-self: center;
+}
+
+.user-info > p:first-of-type {
+    font-weight: bold;
+}
+
+.user-info > p:last-of-type {
+    color: gray;
 }
